--- a/wwwroot/upload.html
+++ b/wwwroot/upload.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Upload new File</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 </head>
 
