--- a/wwwroot/upload.html
+++ b/wwwroot/upload.html
@@ -2,13 +2,13 @@
 <html lang=en>
 
 <head>
-    <title>Upload new File</title>
+    <title>Send to Printer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 </head>
 
 <body>
-    <h1>Upload new File</h1>
+    <h1>Send To Printer</h1>
     <form action="" method=post enctype=multipart/form-data>
         <p><input type=file name=file>
             <input type=submit value=Upload>
